Version 2.2.0
~~~~~~~~~~~~~
* Post DiFX-2.1
* Speed up directory reading
* Better .rpm infrastructure
* IPv6 support added to VSI interface; the whole package at this point is likely IPv6 compliant.
* Count network traffic from all interfaces, not just eth* and ib*.  lo is ignored.

Version 2.1.0
~~~~~~~~~~~~~
* Rename from 1.4.2 prior to DiFX-2.1 tagging
* Version for DiFX-2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
* Post DiFX-2.0.1
* Add SMART dump option to vsn
* Add mk5map utility to recover a directory where one doesn't exist (experimental, Mark5B @ 2 Gbps only now)
* Some additional diagnostics in directory reading
* mk5cp: the --no-dir option allows copying a byte range without reference to a module directory
* mk5cp: some control over the read chunk size is now given to the user
* mk5cp: treat "real time" mode the same way as it is treated in mpifxcorr
* Complete wrapping of XLR calls into WATCHDOG macro statements
* mk5daemon: collect SMART information.  (currently incomplete; information logged upon installation of modules)
* Add stand alone Mark5C data recording program "record5c"
* checkdir: add detection of UKN scans (those rescued by the recording system after a crash)
* mk5dir: can now write a module directory to a module (Mark5B only and directory version 1 only)
* Add fileto5c program which copies a file from the OS filesystem to the Mark5 module
* Add scp capability to mk5cp
* MPI errors are captured and logged
* Stand-alone utility "sukill" added
* Pass on restartSeconds to mpifxcorr in support of restarting jobs
* Send number of CPU cores in Load messages
* mk5dir: don't write .dir files with empty scan labels.  Make one up instead.

Version 1.4.1
~~~~~~~~~~~~~
* Post DiFX-1.5.4/DiFX-2.0.0
* NOTE: Active version is now in DiFX-2.0 / trunk
* Respect DEFAULT_DMS_MASK
* Add Write-only option to testmod
* Fix parsing of mark5 directory files: stepping through extra parameters had a bug.
* No more 1024 scan limit on Mark5 modules